fix broken icons , with large filenames , added truncate text class

--- a/packages/@uppy/core/src/_common.scss
+++ b/packages/@uppy/core/src/_common.scss
@@ -49,6 +49,12 @@
   text-align: right;
 }
 
+.uppy-truncate-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 // Inputs
 
 .uppy-c-textInput {
